[package]
name = "pomidorka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
clap = "3.1.12"
clap_complete = "3.1.2"
colored = "2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
subprocess = "0.2.8"
tempfile = "3.3.0"