[package]
name = "busy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
clap = "3.1.12"
clap_complete = "3.2.4"
colored = "2"
env_logger = "0.9.0"
log = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
subprocess = "0.2.8"
tempfile = "3.3.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
]
